fix layout issues

--- a/pages/home/styles.css
+++ b/pages/home/styles.css
@@ -42,3 +42,14 @@
 .twoSeqsPanelContainer {
     clear: both;
 }
+
+@media (min-width: 1609px) {
+    .midPanel {
+        flex-wrap: nowrap;
+    }
+    .densityPanelContainer {
+        margin-left: 2%;
+        width: 50%;
+    }
+}
+
